# saas-factory

./: .dockerignore  .gitignore  AGENTS.md  API_Endpoints_Report.md  Dockerfile.backend  Dockerfile.frontend  Integration_Verification_Report.md  README.md  STRIPE_IMPLEMENTATION_SUMMARY.md  Saas_Factory  build.py  create-signin-dir.bat  docker-compose.yml  package-lock.json  package.json  railway.json  vercel.json
Scripts/: Feature.md  README.md  Readne - SDK.md  Springs.md  finalize_sprint1.sh  fix_hatch.sh  pyproject.toml  setup_agent_test.sh  setup_iopeer_mvp.sh  spec.md  sys.executable
Scripts/agent-test/: bootstrap_agent_test.sh  requirements.txt  spec.md  test_agent.py
Scripts/agent-test/tests/: test_basic.py  test_crud.py
Scripts/src/iopeer/: cli.py  pipeline.py  spec_parser.py
Scripts/src/iopeer/agents/: auth_template.md  multi_entity_template.md
agents/: README.md  api-designer.json  deployer.json  landing-generator.json  landing-generator.md  mercadopago-checkout.json  mercadopago-orchestrator.json
backend/: .env.example  .gitignore  README.md  comprehensive-test-suite.js  create-test.js  diagnose-issues.js  package-lock.json  package.json  run-tests.bat  simplified-test.js  start-server.js  test-api-endpoints.js  test-api.js  test-billing.js  test-fix-report.js  test-full-system.js  test-generate-api.js  test-health.js  test-llm-service.js  test-mercadopago.js  test-multitenancy.js  test-org-project-integration.js  test-signin.js  test-stripe.js  test-suite.js
docs/: AGENTS_TUTORIAL.md  SAAS_GENERATION.md  STRIPE_INTEGRATION.md  STRIPE_SETUP.md  (+1 more)
(+102 files in other folders)
